--- a/home.html
+++ b/home.html
@@ -14,6 +14,7 @@
 
 	<!-- Included CSS Files -->
 	<link rel="stylesheet" href="stylesheets/app.css">
+	<link rel="stylesheet" href="stylesheets/custom.css">
 
 	<script src="javascripts/foundation/modernizr.foundation.js"></script>
 	<script type="text/javascript" src="//use.typekit.net/bcj1jzi.js"></script>
@@ -36,9 +37,19 @@
 	<!-- project 1 -->
 	<div class="row project">
 		<div class="six columns">
-			<h1>Compelling challenge statement for this project.</h1>
-			<h2>Project Name</h2>
+			<h2>sagwag: <span>raising donations with every turn of the crank.<span></h1>
 			<p>Sed adipiscing mauris id dui ullamcorper in elementum velit sollicitudin.</p>
+		</div>
+		<div class="six columns last image">
+			<img src="/images/home/sagwag.jpg" alt="sagwag">
+		</div>
+	</div>
+
+	<!-- project 2 -->
+	<div class="row project">
+		<div class="six columns">
+			<h2>payments ninja: <span>building traffic and networks with each high score<span></h1>
+			<p>Western Union Small Business needed ...Sed adipiscing mauris id dui ullamcorper in elementum velit sollicitudin.</p>
 		</div>
 		<div class="six columns last image">
 
