added new fonts to typekit

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="stylesheets/custom.css">
 
 	<script src="javascripts/foundation/modernizr.foundation.js"></script>
-	<script type="text/javascript" src="//use.typekit.net/bcj1jzi.js"></script>
+	<script type="text/javascript" src="//use.typekit.net/pfs3dzs.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
