--- a/home.html
+++ b/home.html
@@ -23,36 +23,50 @@
 <body>
 
 	<div class="row home">
-		<div class="twelve columns title">
-			<div class="seven columns">
+		<div class="twelve columns">
+			<div class="six centered columns">
 				<h1>michael thomas wilson</h2>
-				<h2>User experience designer and technologist driving product innovation from idea to implementation.</h2>
+				<h2>Purveyor of fine custom user experiences with detailed hand-crafted code.</h2>
 			</div>
 			<div class="five columns last">
-				<p><em>other information here</em></p>
+				
 			</div>
 		</div>
 	</div>
 
 	<!-- project 1 -->
 	<div class="row project">
-		<div class="six columns">
-			<h2>sagwag: <span>raising donations with every turn of the crank.<span></h1>
+		<div class="four columns title">
+			<h2>sagwag</h2>
+			<h3>Raising donations with every turn of the crank.</h3>
 			<p>Sed adipiscing mauris id dui ullamcorper in elementum velit sollicitudin.</p>
 		</div>
-		<div class="six columns last image">
+		<div class="seven columns image last offset-by-one">
 			<img src="/images/home/sagwag.jpg" alt="sagwag">
 		</div>
 	</div>
 
-	<!-- project 2 -->
+	<!-- project 1 -->
 	<div class="row project">
-		<div class="six columns">
-			<h2>payments ninja: <span>building traffic and networks with each high score<span></h1>
-			<p>Western Union Small Business needed ...Sed adipiscing mauris id dui ullamcorper in elementum velit sollicitudin.</p>
+		<div class="four columns">
+			<h2>sagwag</h2>
+			<h3>Raising donations with every turn of the crank.</h3>
+			<p>Sed adipiscing mauris id dui ullamcorper in elementum velit sollicitudin.</p>
 		</div>
-		<div class="six columns last image">
-
+		<div class="seven columns image last offset-by-one">
+			<img src="/images/home/sagwag.jpg" alt="sagwag">
+		</div>
+	</div>
+	<div class="row clearfix"></div>
+	<!-- project 1 -->
+	<div class="row project">
+		<div class="four columns">
+			<h2>sagwag</h2>
+			<h3>Raising donations with every turn of the crank.</h3>
+			<p>Sed adipiscing mauris id dui ullamcorper in elementum velit sollicitudin.</p>
+		</div>
+		<div class="seven columns image last offset-by-one">
+			<img src="/images/home/sagwag.jpg" alt="sagwag">
 		</div>
 	</div>
 
