finished header layout for home page

--- a/home.html
+++ b/home.html
@@ -24,48 +24,57 @@
 
 	<div class="row home">
 		<div class="twelve columns">
-			<div class="six centered columns">
-				<h1>michael thomas wilson</h2>
-				<h2>Purveyor of fine custom user experiences with detailed hand-crafted code.</h2>
+			<div class="row">
+				<div class="six centered columns">
+					<h1>michael thomas wilson</h2>
+					<h2>Purveyor of fine custom user experiences<br> with detailed, hand-crafted code.</h2>
+					<div class="row">
+						<div class="twelve columns centered">
+							<a href="http://www.linkedin.com/in/michaelthomaswilson"><img src="images/btn_linkedin.png" alt="linkedin"></a>
+							<a href="http://twitter.com/trakkstar"><img src="images/btn_twitter.png" alt="twitter"></a>
+							<a href=""><img src="images/btn_email.png" alt="linkedin"></a>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="five columns last">
-				
+			<div class="row">
+				<div class="eight centered columns">
+					<h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec neque vel risus accumsan posuere. Integer viverra scelerisque tempus. Nulla at fermentum turpis. Praesent mollis nisi turpis. Aliquam luctus mi at orci ultrices lacinia.</h3>
+				</div>
 			</div>
 		</div>
 	</div>
 
 	<!-- project 1 -->
 	<div class="row project">
-		<div class="four columns title">
+		<div class="three columns title">
 			<h2>sagwag</h2>
 			<h3>Raising donations with every turn of the crank.</h3>
 			<p>Sed adipiscing mauris id dui ullamcorper in elementum velit sollicitudin.</p>
 		</div>
-		<div class="seven columns image last offset-by-one">
+		<div class="eight columns image last offset-by-one">
 			<img src="/images/home/sagwag.jpg" alt="sagwag">
 		</div>
 	</div>
-
 	<!-- project 1 -->
 	<div class="row project">
-		<div class="four columns">
+		<div class="three columns title">
 			<h2>sagwag</h2>
 			<h3>Raising donations with every turn of the crank.</h3>
 			<p>Sed adipiscing mauris id dui ullamcorper in elementum velit sollicitudin.</p>
 		</div>
-		<div class="seven columns image last offset-by-one">
+		<div class="eight columns image last offset-by-one">
 			<img src="/images/home/sagwag.jpg" alt="sagwag">
 		</div>
 	</div>
-	<div class="row clearfix"></div>
 	<!-- project 1 -->
 	<div class="row project">
-		<div class="four columns">
+		<div class="three columns title">
 			<h2>sagwag</h2>
 			<h3>Raising donations with every turn of the crank.</h3>
 			<p>Sed adipiscing mauris id dui ullamcorper in elementum velit sollicitudin.</p>
 		</div>
-		<div class="seven columns image last offset-by-one">
+		<div class="eight columns image last offset-by-one">
 			<img src="/images/home/sagwag.jpg" alt="sagwag">
 		</div>
 	</div>
