added github icon

--- a/home.html
+++ b/home.html
@@ -30,9 +30,10 @@
 					<h2>Purveyor of fine custom user experiences<br> with detailed, hand-crafted code.</h2>
 					<div class="row">
 						<div class="twelve columns centered">
-							<a href="http://www.linkedin.com/in/michaelthomaswilson"><img src="images/btn_linkedin.png" alt="linkedin"></a>
-							<a href="http://twitter.com/trakkstar"><img src="images/btn_twitter.png" alt="twitter"></a>
-							<a href=""><img src="images/btn_email.png" alt="linkedin"></a>
+							<a class="social" href="http://www.linkedin.com/in/michaelthomaswilson"><img src="images/btn_linkedin.png" alt="linkedin"></a>
+							<a class="social" href="http://twitter.com/trakkstar"><img src="images/btn_twitter.png" alt="twitter"></a>
+							<a class="social" href="http://github.com/michaelthomaswilson"><img src="images/btn_github.png" alt="github"></a>
+							<a class="social" href=""><img src="images/btn_email.png" alt="linkedin"></a>
 						</div>
 					</div>
 				</div>
