added footer to both templates

--- a/home.html
+++ b/home.html
@@ -79,6 +79,25 @@
 			<img src="/images/home/sagwag.jpg" alt="sagwag">
 		</div>
 	</div>
+	<div class="row footer">
+		<div class="twelve columns">
+			<div class="row">
+				<div class="five columns">
+					<h4>clients</h4>
+					<p>client list here</p>
+				</div>
+				<div class="five columns offset-by-two">
+					<h4>technologies</h4>
+					<p>technologies list here.  logos?</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="four columns centered">
+					<p>&copy; 2012 Michael Thomas Wilson</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<!-- Included JS Files (Uncompressed) -->
 	<script src="javascripts/foundation/jquery.js"></script>
