tweaked project layout

--- a/project.html
+++ b/project.html
@@ -43,7 +43,7 @@
 
 	<!-- intro -->
 	<div class="row">
-		<div class="seven columns description">
+		<div class="seven columns description end">
 			<h1>sagwag</h1>
 			<h2>Raising donations with every turn of the crank.</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in urna a tellus pellentesque dignissim et eget nibh. In ac nisl ut elit cursus egestas quis malesuada metus. Fusce magna lacus, vulputate quis interdum id, vestibulum nec erat. Nulla lobortis bibendum erat eu venenatis. Mauris et dui non nisl venenatis hendrerit. Donec tellus velit, venenatis dapibus aliquam quis, ultricies bibendum sem. Proin in nibh felis, quis pharetra velit. In in dui magna, consequat consequat nisl.</p>
