added real content to project layout

--- a/project.html
+++ b/project.html
@@ -46,18 +46,21 @@
 		<div class="seven columns description end">
 			<h1>sagwag</h1>
 			<h2>Raising donations with every turn of the crank.</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in urna a tellus pellentesque dignissim et eget nibh. In ac nisl ut elit cursus egestas quis malesuada metus. Fusce magna lacus, vulputate quis interdum id, vestibulum nec erat. Nulla lobortis bibendum erat eu venenatis. Mauris et dui non nisl venenatis hendrerit. Donec tellus velit, venenatis dapibus aliquam quis, ultricies bibendum sem. Proin in nibh felis, quis pharetra velit. In in dui magna, consequat consequat nisl.</p>
+			<h3>challenge</h3>
+			<p>Charity bike rides are a great way for an organization to raise money through individual efforts.  The problem is donations end during the ride which is the most compelling part of the experience.  The hitch was that we only had 3 weeks until the next ride.</p>
+			<h3>solution</h3>
+			<p>We created Sagwag to drive donors through social media to an online community where they could experience the ride in real time and make donations to help the rider when they really needed it.  Using an integrated team of three made up of myself and two designers, we used tight collaboration and iterative process to crank out an alpha release within the tight timeframe.</p>
 		</div>
 	</div>
 
 	<!-- photo 1 -->
 	<div class="row">
 		<div class="twelve columns">
-			<img class="photo" alt="placeholder">
+			<img class="photo" alt="placeholder" src="/images/portfolio/sagwag/whiteboard.jpg">
 
 			<div class="caption">
-				<h3>subhead example</h3>
-				<p>Etiam gravida, libero in tincidunt semper, ante lectus tristique est, non tristique odio orci vestibulum dolor. Maecenas tristique iaculis porta. Curabitur at quam ligula. Curabitur vel ipsum at diam pulvinar egestas. Proin egestas sapien nibh, eget consequat diam. Duis porta nisl ut sapien sodales lacinia volutpat neque congue. Cras sed eros eget mi feugiat interdum.</p>
+				<h3>technology</h3>
+				<p>Built using Ruby on Rails for rapid development, we are leveraged the Facebook API for authentication and the broadcasting of signup and donation events.  The Geoloci API was used for real-time geolocation of the rider and to fire events when the rider reached the toughest part of the ascent.</p>
 			</div>
 		</div>
 	</div>
@@ -65,11 +68,11 @@
 	<!-- photo 3 -->
 	<div class="row">
 		<div class="twelve columns">
-			<img class="photo" alt="placeholder">
+			<img class="photo" alt="placeholder" src="/images/portfolio/sagwag/screens.jpg">
 
 			<div class="caption">
-				<h3>subhead example</h3>
-				<p>Etiam gravida, libero in tincidunt semper, ante lectus tristique est, non tristique odio orci vestibulum dolor. Maecenas tristique iaculis porta. Curabitur at quam ligula. Curabitur vel ipsum at diam pulvinar egestas. Proin egestas sapien nibh, eget consequat diam. Duis porta nisl ut sapien sodales lacinia volutpat neque congue. Cras sed eros eget mi feugiat interdum.</p>
+				<h3>result</h3>
+				<p>We tested Sagwag out as an alpha release during the Courage Classic, a three-day  charity ride that benefits the Children’s Hospital, with some success. The riders that activated their social networks were able to raise an additional 20% in pledges on the day of the event. </p>
 			</div>
 		</div>
 	</div>
