completed payments legend page

--- a/payments_legend.html
+++ b/payments_legend.html
@@ -63,7 +63,7 @@ While the users are trying to get the high score, they are learning about Wester
 	<div class="row">
 		<div class="six columns description">
 			<h3>the result</h3>
-			<p>With solid pre tradeshow responses, traffic was increased to Western Union's booths where the game was presented on iPads.  The high score leaderboard was displayed on a large flat panel screen with each player's LinkedIn photo, name and status.</p>
+			<p>With solid pre-tradeshow responses, traffic was increased to Western Union's booths where the game was presented on iPads.  The high score leaderboard was displayed on a large flat panel screen with each player's LinkedIn photo, name and status.</p>
 		</div>
 		<div class="six columns description">
 			<h3>my role</h3>
@@ -75,10 +75,10 @@ While the users are trying to get the high score, they are learning about Wester
 	<div class="row">
 		<div class="twelve columns">
 			<img class="photo" alt="placeholder" src="/images/portfolio/payments_legend/flow.jpg">
-
 			<div class="caption">
-				<h3>technology</h3>
-				<p>Built using Ruby on Rails for rapid development, we are leveraged the Facebook API for authentication and the broadcasting of signup and donation events.  The Geoloci API was used for real-time geolocation of the rider and to fire events when the rider reached the toughest part of the ascent.</p>
+				<h3>application flow / api touchpoints</h3>
+				<p>The incredibly small budget and fast turnaround required us to utilize several rapid-development solutions. 
+					An open source javascript-based pong game engine was customized and reskinned while being integrated with a Ruby on Rails backend.</p>
 			</div>
 		</div>
 	</div>
@@ -89,8 +89,8 @@ While the users are trying to get the high score, they are learning about Wester
 			<img class="photo" alt="placeholder" src="/images/portfolio/payments_legend/screens1.jpg">
 
 			<div class="caption">
-				<h3>result</h3>
-				<p>We tested Sagwag out as an alpha release during the Courage Classic, a three-day  charity ride that benefits the Children’s Hospital, with some success. The riders that activated their social networks were able to raise an additional 20% in pledges on the day of the event. </p>
+				<h3>linkedin integration</h3>
+				<p>User's were encouraged to login with their LinkedIn profile for a more customized experience. LinkedIn was a more appropriate social source as the user base was focused on their profession and networking. This also allowed the user to leverage their LinkedIn status to promote their company on the leaderboard.</p>
 			</div>
 		</div>
 	</div>
@@ -101,9 +101,16 @@ While the users are trying to get the high score, they are learning about Wester
 			<img class="photo" alt="placeholder" src="/images/portfolio/payments_legend/screens2.jpg">
 
 			<div class="caption">
-				<h3>subhead example</h3>
-				<p>Etiam gravida, libero in tincidunt semper, ante lectus tristique est, non tristique odio orci vestibulum dolor. Maecenas tristique iaculis porta. Curabitur at quam ligula. Curabitur vel ipsum at diam pulvinar egestas. Proin egestas sapien nibh, eget consequat diam. Duis porta nisl ut sapien sodales lacinia volutpat neque congue. Cras sed eros eget mi feugiat interdum.</p>
+				<h3>product messaging</h3>
+				<p>Each level was started and finished with product messaging screens to educate the user in Western Union's product offering. By integrating these screens within the game play, we are able to avoid the application becoming too "sales-y." </p>
 			</div>
+		</div>
+	</div>
+
+	<!-- photo 4 -->
+	<div class="row">
+		<div class="twelve columns">
+			<img class="photo" alt="placeholder" src="/images/portfolio/payments_legend/screens3.jpg">
 		</div>
 	</div>
 	<div class="row footer">
