--- a/sagwag.html
+++ b/sagwag.html
@@ -52,7 +52,7 @@
 	<div class="row">
 		<div class="six columns description">
 			<h3>challenge</h3>
-			<p>Charity bike rides are a great way for an organization to raise money through individual efforts.  The problem is donations end during the ride which is the most compelling part of the experience.  We needed a way to share the rider's effort with his donors to compell them to donate more.</p>
+			<p>Charity bike rides are a great way for an organization to raise money through individual efforts.  The problem is donations end during the ride&mdash;the most compelling part of the experience.  We needed a way to share the riders' efforts with their donors to compell them to donate more.</p>
 		</div>
 		<div class="six columns description">
 			<h3>solution</h3>
@@ -62,7 +62,7 @@
 	<div class="row">
 		<div class="six columns description">
 			<h3>the result</h3>
-			<p>We tested Sagwag out as an alpha release during the Courage Classic, a three-day  charity ride that benefits the Children’s Hospital, with some success. The riders that activated their social networks were able to raise an additional 20% in pledges on the day of the event.</p>
+			<p>We tested Sagwag out as an alpha release during the Courage Classic, a three-day  charity ride that benefits the Children’s Hospital. The riders that activated their social networks were able to raise an additional 20% in pledges on the day of the event through Sagwag.</p>
 		</div>
 		<div class="six columns description">
 			<h3>my role</h3>
@@ -74,6 +74,18 @@
 	<div class="row">
 		<div class="twelve columns">
 			<img class="photo" alt="placeholder" src="/images/portfolio/sagwag/whiteboard.jpg">
+
+			<div class="caption">
+				<h3>approach</h3>
+				<p>Working through several iterations on a whiteboard, we focused on two major drivers:  how can we capture the excitement of the rider's experience online and how to motivate users to join and donate.</p>
+			</div>
+		</div>
+	</div>
+
+	<!-- photo 2 -->
+	<div class="row">
+		<div class="twelve columns">
+			<img class="photo" alt="placeholder" src="/images/portfolio/sagwag/whiteboard2.jpg">
 
 			<div class="caption">
 				<h3>technology</h3>
@@ -94,17 +106,13 @@
 		</div>
 	</div>
 
-	<!-- photo 3 -->
+	<!-- photo 4 -->
 	<div class="row">
 		<div class="twelve columns">
-			<img class="photo" alt="placeholder">
-
-			<div class="caption">
-				<h3>subhead example</h3>
-				<p>Etiam gravida, libero in tincidunt semper, ante lectus tristique est, non tristique odio orci vestibulum dolor. Maecenas tristique iaculis porta. Curabitur at quam ligula. Curabitur vel ipsum at diam pulvinar egestas. Proin egestas sapien nibh, eget consequat diam. Duis porta nisl ut sapien sodales lacinia volutpat neque congue. Cras sed eros eget mi feugiat interdum.</p>
-			</div>
+			<img class="photo" alt="placeholder" src="/images/portfolio/sagwag/social_integration.jpg">
 		</div>
 	</div>
+
 	<div class="row footer">
 		<div class="twelve columns">
 			<div class="row">
