fixed copy for sagwag

--- a/sagwag.html
+++ b/sagwag.html
@@ -89,7 +89,7 @@
 
 			<div class="caption">
 				<h3>technology</h3>
-				<p>Built using Ruby on Rails for rapid development, we are leveraged the Facebook API for authentication and the broadcasting of signup and donation events.  The Geoloci API was used for real-time geolocation of the rider and to fire events when the rider reached the toughest part of the ascent.</p>
+				<p>Built using Ruby on Rails for rapid development, we leveraged the Facebook API for authentication and the broadcasting of signup and donation events.  The Geoloci API was used for real-time geolocation of the rider and firing events when the rider reached the toughest part of the ascent.</p>
 			</div>
 		</div>
 	</div>
@@ -101,7 +101,7 @@
 
 			<div class="caption">
 				<h3>result</h3>
-				<p>We tested Sagwag out as an alpha release during the Courage Classic, a three-day  charity ride that benefits the Children’s Hospital, with some success. The riders that activated their social networks were able to raise an additional 20% in pledges on the day of the event. </p>
+				<p>With the success of earning an extra 20% for each rider, we interviewed the riders and donors gathering valuable information for improving the next version of Sagwag. </p>
 			</div>
 		</div>
 	</div>
