completed get out west page

--- a/get_out_west.html
+++ b/get_out_west.html
@@ -44,40 +44,40 @@
 	<!-- intro -->
 	<div class="row">
 		<div class="twelve columns description centered">
-			<h1>sagwag</h1>
-			<h2>Web application that raises donations with every turn of the crank.</h2>
+			<h1>Get Out West</h1>
+			<h2>Proposed interactive experience that drives outdoor adventures.</h2>
 			<hr>
 		</div>
 	</div>
 	<div class="row">
 		<div class="six columns description">
 			<h3>challenge</h3>
-			<p>Charity bike rides are a great way for an organization to raise money through individual efforts.  The problem is donations end during the ride&mdash;the most compelling part of the experience.  We needed a way to share the riders' efforts with their donors to compell them to donate more.</p>
+			<p>Our client approached us to drive engagement for their new program that seeks to motivate families to get outdoors, explore and create adventures.</p>
 		</div>
 		<div class="six columns description">
 			<h3>solution</h3>
-			<p>We created Sagwag to drive donors through social media to an online community where they could experience the ride in real time and make donations to give the rider the push they needed.  Using an integrated team made up of myself and two designers, we used close collaboration and an iterative process to crank out an alpha release within a 3 week cycle.</p>
+			<p>Our research showed that the barrier to families engaging the outdoors included where to go, concerns with cost, what activities were available and how difficult were these activities.  In response we developed an integrated map, gamification and travel journal system that helps to answer each of these concerns.</p>
 		</div>
 	</div>
 	<div class="row">
 		<div class="six columns description">
 			<h3>the result</h3>
-			<p>We tested Sagwag out as an alpha release during the Courage Classic, a three-day  charity ride that benefits the Children’s Hospital. The riders that activated their social networks were able to raise an additional 20% in pledges on the day of the event through Sagwag.</p>
+			<p>Our proposed system was met with great excitement within the committee and throughout the entire organization.  We are currently awaiting decisions on next steps and a possible start date.</p>
 		</div>
 		<div class="six columns description">
 			<h3>my role</h3>
-			<p>For this fast-turnaround project I acted in multiple roles as UX architect, project manager and rails developer.  The amazing UI design was created by Jerry Stafford, Art Director and Ben Wallace, designer, at Pure.</p>
+			<p>For this proposal I acted as UX architect and technologist to determine the best solutions and the most appropriate technologies for implementation.</p>
 		</div>
 	</div>
 
 	<!-- photo 1 -->
 	<div class="row">
 		<div class="twelve columns">
-			<img class="photo" alt="placeholder" src="/images/portfolio/sagwag/whiteboard.jpg">
+			<img class="photo" alt="placeholder" src="/images/portfolio/get_out_west/brainstorm.jpg">
 
 			<div class="caption">
-				<h3>approach</h3>
-				<p>Working through several iterations on a whiteboard, we focused on two major drivers:  how can we capture the excitement of the rider's experience online and how to motivate users to join and donate.</p>
+				<h3>brainstorm</h3>
+				<p>Starting from our initial ideas of solution components, we brainstorm requirements for each part of the system, validating it against the overall objectives. One of our main areas of focus was balancing the user needs of the children with the concerns of their parents.</p>
 			</div>
 		</div>
 	</div>
@@ -85,11 +85,11 @@
 	<!-- photo 2 -->
 	<div class="row">
 		<div class="twelve columns">
-			<img class="photo" alt="placeholder" src="/images/portfolio/sagwag/whiteboard2.jpg">
+			<img class="photo" alt="placeholder" src="/images/portfolio/get_out_west/wireframes.jpg">
 
 			<div class="caption">
-				<h3>technology</h3>
-				<p>Built using Ruby on Rails for rapid development, we leveraged the Facebook API for authentication and the broadcasting of signup and donation events.  The Geoloci API was used for real-time geolocation of the rider and firing events when the rider reached the toughest part of the ascent.</p>
+				<h3>wireframes</h3>
+				<p>Working with pen and paper allows rapid development of screen wireframes for the mapping system, the mobile gamification system and the adventure journal photo album.</p>
 			</div>
 		</div>
 	</div>
@@ -97,7 +97,7 @@
 	<!-- photo 3 -->
 	<div class="row">
 		<div class="twelve columns">
-			<img class="photo" alt="placeholder" src="/images/portfolio/sagwag/screens.jpg">
+			<img class="photo" alt="placeholder" src="/images/portfolio/get_out_west/ipad_map.jpg">
 
 			<div class="caption">
 				<h3>result</h3>
@@ -109,7 +109,21 @@
 	<!-- photo 4 -->
 	<div class="row">
 		<div class="twelve columns">
-			<img class="photo" alt="placeholder" src="/images/portfolio/sagwag/social_integration.jpg">
+			<img class="photo" alt="placeholder" src="/images/portfolio/get_out_west/ipad_journal.jpg">
+		</div>
+	</div>
+
+	<!-- photo 5 -->
+	<div class="row">
+		<div class="twelve columns">
+			<img class="photo" alt="placeholder" src="/images/portfolio/get_out_west/mobile_screens1.jpg">
+		</div>
+	</div>
+
+	<!-- photo 6 -->
+	<div class="row">
+		<div class="twelve columns">
+			<img class="photo" alt="placeholder" src="/images/portfolio/get_out_west/mobile_screens2.jpg">
 		</div>
 	</div>
 
