finished content for get out west page

--- a/get_out_west.html
+++ b/get_out_west.html
@@ -100,8 +100,8 @@
 			<img class="photo" alt="placeholder" src="/images/portfolio/get_out_west/ipad_map.jpg">
 
 			<div class="caption">
-				<h3>result</h3>
-				<p>With the success of earning an extra 20% for each rider, we interviewed the riders and donors gathering valuable information for improving the next version of Sagwag. </p>
+				<h3>adventure map</h3>
+				<p>Allows families to easily locate outdoor activities near and far.  They can easily sort activities by type, difficulty, cost and other factors.</p>
 			</div>
 		</div>
 	</div>
@@ -110,6 +110,11 @@
 	<div class="row">
 		<div class="twelve columns">
 			<img class="photo" alt="placeholder" src="/images/portfolio/get_out_west/ipad_journal.jpg">
+
+			<div class="caption">
+				<h3>activity journal</h3>
+				<p>This live journal automatically combines the family's on-site photography with aggregated content about the location and wild-life.  This journal also tracks the children's activity badge achievements and progress.</p>
+			</div>
 		</div>
 	</div>
 
