updates to home page

--- a/home.html
+++ b/home.html
@@ -49,8 +49,7 @@
 	<div class="row project">
 		<div class="three columns title">
 			<h2>sagwag</h2>
-			<h3>Raising donations with every turn of the crank.</h3>
-			<p>Sed adipiscing mauris id dui ullamcorper in elementum velit sollicitudin.</p>
+			<h3>Web application that raises donations with every turn of the crank.</h3>
 		</div>
 		<div class="eight columns image last offset-by-one">
 			<img src="/images/home/sagwag.jpg" alt="sagwag">
@@ -59,12 +58,11 @@
 	<!-- project 1 -->
 	<div class="row project">
 		<div class="three columns title">
-			<h2>sagwag</h2>
-			<h3>Raising donations with every turn of the crank.</h3>
-			<p>Sed adipiscing mauris id dui ullamcorper in elementum velit sollicitudin.</p>
+			<h2>get out west</h2>
+			<h3>Proposed interactive experience that drives outdoor adventures.</h3>
 		</div>
 		<div class="eight columns image last offset-by-one">
-			<img src="/images/home/sagwag.jpg" alt="sagwag">
+			<img src="/images/home/get_out_west.jpg" alt="get out west">
 		</div>
 	</div>
 	<!-- project 1 -->
