adding sections to home page

--- a/home.html
+++ b/home.html
@@ -47,33 +47,42 @@
 
 	<!-- project 1 -->
 	<div class="row project">
-		<div class="three columns title">
+		<div class="four columns title">
+			<h2>sexual health.com</h2>
+			<h3>Online, confidential medical testing with secure results delivery and consultation.</h3>
+		</div>
+		<div class="eight columns image last">
+			<img src="/images/home/sagwag.jpg" alt="sagwag">
+		</div>
+	</div>
+	<!-- project 2 -->
+	<div class="row project">
+		<div class="four columns title">
 			<h2>sagwag</h2>
 			<h3>Web application that raises donations with every turn of the crank.</h3>
 		</div>
-		<div class="eight columns image last offset-by-one">
+		<div class="eight columns image last">
 			<img src="/images/home/sagwag.jpg" alt="sagwag">
 		</div>
 	</div>
-	<!-- project 1 -->
+	<!-- project 3 -->
 	<div class="row project">
-		<div class="three columns title">
+		<div class="four columns title">
 			<h2>get out west</h2>
 			<h3>Proposed interactive experience that drives outdoor adventures.</h3>
 		</div>
-		<div class="eight columns image last offset-by-one">
+		<div class="eight columns image last">
 			<img src="/images/home/get_out_west.jpg" alt="get out west">
 		</div>
 	</div>
-	<!-- project 1 -->
+	<!-- project 4 -->
 	<div class="row project">
-		<div class="three columns title">
-			<h2>sagwag</h2>
-			<h3>Raising donations with every turn of the crank.</h3>
-			<p>Sed adipiscing mauris id dui ullamcorper in elementum velit sollicitudin.</p>
+		<div class="four columns title">
+			<h2>payments legend</h2>
+			<h3>Mobile video game inspired by the 8-bit videos of the past.</h3>
 		</div>
-		<div class="eight columns image last offset-by-one">
-			<img src="/images/home/sagwag.jpg" alt="sagwag">
+		<div class="eight columns image last">
+			<img src="/images/home/payments_legend.jpg" alt="payments legend">
 		</div>
 	</div>
 	<div class="row footer">
