linked home page with individual projects

--- a/home.html
+++ b/home.html
@@ -47,43 +47,51 @@
 
 	<!-- project 1 -->
 	<div class="row project">
-		<div class="four columns title">
-			<h2>sexual health.com</h2>
-			<h3>Online, confidential medical testing with secure results delivery and consultation.</h3>
-		</div>
-		<div class="eight columns image last">
-			<img src="/images/home/sagwag.jpg" alt="sagwag">
-		</div>
+		<a href="sexual_health.html">
+			<div class="four columns title">
+				<h2>sexualhealth.com</h2>
+				<h3>Health information source with online, confidential medical testing with secure results delivery and consultation.</h3>
+			</div>
+			<div class="eight columns image last">
+				<img src="/images/home/sexual_health.jpg" alt="sexualhealth.com">
+			</div>
+		</a>
 	</div>
 	<!-- project 2 -->
 	<div class="row project">
-		<div class="four columns title">
-			<h2>sagwag</h2>
-			<h3>Web application that raises donations with every turn of the crank.</h3>
-		</div>
-		<div class="eight columns image last">
-			<img src="/images/home/sagwag.jpg" alt="sagwag">
-		</div>
+		<a href="sagwag.html">
+			<div class="four columns title">
+				<h2>sagwag</h2>
+				<h3>Web application that raises donations with every turn of the crank.</h3>
+			</div>
+			<div class="eight columns image last">
+				<img src="/images/home/sagwag.jpg" alt="sagwag">
+			</div>
+		</a>
 	</div>
 	<!-- project 3 -->
 	<div class="row project">
-		<div class="four columns title">
-			<h2>get out west</h2>
-			<h3>Proposed interactive experience that drives outdoor adventures.</h3>
-		</div>
-		<div class="eight columns image last">
-			<img src="/images/home/get_out_west.jpg" alt="get out west">
-		</div>
+		<a href="get_out_west.html">
+			<div class="four columns title">
+				<h2>get out west</h2>
+				<h3>Proposed interactive experience that drives outdoor adventures.</h3>
+			</div>
+			<div class="eight columns image last">
+				<img src="/images/home/get_out_west.jpg" alt="get out west">
+			</div>
+		</a>
 	</div>
 	<!-- project 4 -->
 	<div class="row project">
-		<div class="four columns title">
-			<h2>payments legend</h2>
-			<h3>Mobile video game inspired by the 8-bit videos of the past.</h3>
-		</div>
-		<div class="eight columns image last">
-			<img src="/images/home/payments_legend.jpg" alt="payments legend">
-		</div>
+		<a href="payments_legend.html">
+			<div class="four columns title">
+				<h2>payments legend</h2>
+				<h3>Mobile video game inspired by the 8-bit videos of the past.</h3>
+			</div>
+			<div class="eight columns image last">
+				<img src="/images/home/payments_legend.jpg" alt="payments legend">
+			</div>
+		</a>
 	</div>
 	<div class="row footer">
 		<div class="twelve columns">
