--- a/home.html
+++ b/home.html
@@ -57,6 +57,19 @@
 			</div>
 		</a>
 	</div>
+
+	<!-- project 1 -->
+	<div class="row project">
+		<a href="stx.html">
+			<div class="four columns title">
+				<h2>std test express mobile site</h2>
+				<h3>Online, private medical testing and consultation service directly from your mobile device.</h3>
+			</div>
+			<div class="eight columns image last">
+				<img src="/images/home/stx.jpg" alt="stdtestexpress.com">
+			</div>
+		</a>
+	</div>
 	<!-- project 2 -->
 	<div class="row project">
 		<a href="sagwag.html">
