--- a/stx.html
+++ b/stx.html
@@ -44,8 +44,8 @@
 	<!-- intro -->
 	<div class="row">
 		<div class="twelve columns description centered">
-			<h1>sexualhealth.com</h1>
-			<h2>Health information source with online, confidential medical testing with secure results delivery and consultation.</h2>
+			<h1>stdtestexpress mobile site</h1>
+			<h2>Online, private medical testing and consultation service directly from your mobile device.</h2>
 			<hr>
 		</div>
 	</div>
@@ -73,10 +73,10 @@
 	<!-- photo 1 -->
 	<div class="row">
 		<div class="twelve columns">
-			<img class="photo" alt="placeholder" src="/images/portfolio/sexual_health/integration.jpg">
+			<img class="photo" alt="placeholder" src="/images/portfolio/stx/how_it_works.jpg">
 
 			<div class="caption">
-				<h3>approach</h3>
+				<h3>how it works</h3>
 				<p>Working through several iterations on a whiteboard, we focused on two major drivers:  how can we capture the excitement of the rider's experience online and how to motivate users to join and donate.</p>
 			</div>
 		</div>
@@ -85,10 +85,10 @@
 	<!-- photo 2 -->
 	<div class="row">
 		<div class="twelve columns">
-			<img class="photo" alt="placeholder" src="/images/portfolio/sexual_health/location_flow.jpg">
+			<img class="photo" alt="placeholder" src="/images/portfolio/stx/test_pricing.jpg">
 
 			<div class="caption">
-				<h3>technology</h3>
+				<h3>test pricing</h3>
 				<p>Built using Ruby on Rails for rapid development, we leveraged the Facebook API for authentication and the broadcasting of signup and donation events.  The Geoloci API was used for real-time geolocation of the rider and firing events when the rider reached the toughest part of the ascent.</p>
 			</div>
 		</div>
@@ -97,19 +97,12 @@
 	<!-- photo 3 -->
 	<div class="row">
 		<div class="twelve columns">
-			<img class="photo" alt="placeholder" src="/images/portfolio/sagwag/screens.jpg">
+			<img class="photo" alt="placeholder" src="/images/portfolio/stx/checkout.jpg">
 
 			<div class="caption">
-				<h3>result</h3>
+				<h3>checkout</h3>
 				<p>With the success of earning an extra 20% for each rider, we interviewed the riders and donors gathering valuable information for improving the next version of Sagwag. </p>
 			</div>
-		</div>
-	</div>
-
-	<!-- photo 4 -->
-	<div class="row">
-		<div class="twelve columns">
-			<img class="photo" alt="placeholder" src="/images/portfolio/sagwag/social_integration.jpg">
 		</div>
 	</div>
 
