completed stdtestexpress page

--- a/stx.html
+++ b/stx.html
@@ -45,28 +45,28 @@
 	<div class="row">
 		<div class="twelve columns description centered">
 			<h1>stdtestexpress mobile site</h1>
-			<h2>Online, private medical testing and consultation service directly from your mobile device.</h2>
+			<h2>Online, private medical testing and consultation<br> service directly from your mobile device.</h2>
 			<hr>
 		</div>
 	</div>
 	<div class="row">
 		<div class="six columns description">
 			<h3>challenge</h3>
-			<p>Charity bike rides are a great way for an organization to raise money through individual efforts.  The problem is donations end during the ride&mdash;the most compelling part of the experience.  We needed a way to share the riders' efforts with their donors to compell them to donate more.</p>
+			<p>Bring our highly successful online std information and testing platform to mobile phones.  We needed to quickly educate the user on the product offering and testing process while building trust.</p>
 		</div>
 		<div class="six columns description">
 			<h3>solution</h3>
-			<p>We created Sagwag to drive donors through social media to an online community where they could experience the ride in real time and make donations to give the rider the push they needed.  Using an integrated team made up of myself and two designers, we used close collaboration and an iterative process to crank out an alpha release within a 3 week cycle.</p>
+			<p>Present the information in a simple, easily-digestible format that guides the user through the process.  Users have the option to speak with a care advisor at any time.</p>
 		</div>
 	</div>
 	<div class="row">
 		<div class="six columns description">
 			<h3>the result</h3>
-			<p>We tested Sagwag out as an alpha release during the Courage Classic, a three-day  charity ride that benefits the Children’s Hospital. The riders that activated their social networks were able to raise an additional 20% in pledges on the day of the event through Sagwag.</p>
+			<p>Increased traffic and conversions via our mobile channel.</p>
 		</div>
 		<div class="six columns description">
 			<h3>my role</h3>
-			<p>For this fast-turnaround project I acted in multiple roles as UX architect, project manager and rails developer.  The amazing UI design was created by Jerry Stafford, Art Director and Ben Wallace, designer, at Pure.</p>
+			<p>My role was visual designer and prototyper working in a team of three ux designers.</p>
 		</div>
 	</div>
 
@@ -77,7 +77,7 @@
 
 			<div class="caption">
 				<h3>how it works</h3>
-				<p>Working through several iterations on a whiteboard, we focused on two major drivers:  how can we capture the excitement of the rider's experience online and how to motivate users to join and donate.</p>
+				<p>Educate the user on our simple and confidential testing process.</p>
 			</div>
 		</div>
 	</div>
@@ -89,7 +89,7 @@
 
 			<div class="caption">
 				<h3>test pricing</h3>
-				<p>Built using Ruby on Rails for rapid development, we leveraged the Facebook API for authentication and the broadcasting of signup and donation events.  The Geoloci API was used for real-time geolocation of the rider and firing events when the rider reached the toughest part of the ascent.</p>
+				<p>Each test and test package is presented clearly illustrating whats included and its value.</p>
 			</div>
 		</div>
 	</div>
@@ -101,7 +101,7 @@
 
 			<div class="caption">
 				<h3>checkout</h3>
-				<p>With the success of earning an extra 20% for each rider, we interviewed the riders and donors gathering valuable information for improving the next version of Sagwag. </p>
+				<p>The user is guided through each step of medical questiosn, lab locations and purchase information.</p>
 			</div>
 		</div>
 	</div>
